[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-kroki"
version = "1.3.0"
description = "Kroki integration into sphinx"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Martin Hasoň", email = "martin.hason@gmail.com" },
    { name = "Daniel Eades", email = "danieleades@hotmail.com" },
]
classifiers = [
    "Framework :: Sphinx :: Extension",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sphinx",
    "requests>=2.4.2",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/sphinx-contrib/kroki"

[dependency-groups]
dev = [
    "black",
    "flake8",
    "mypy",
    "coverage",
    "pytest",
    "pytest-cov",
    "types-requests",
    "types-PyYAML",
    "types-docutils",
]

[tool.black]
line-length = 79
